# Axiom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
axiom-ast/: CMakeLists.txt
axiom-ast/include/axiom/ast/: nodes.hpp  printer.hpp  visitor.hpp
axiom-ast/src/: printer.cpp
axiom-cli/: CMakeLists.txt
axiom-cli/include/axiom/cli/: commands.hpp  pipeline.hpp
axiom-cli/src/: commands.cpp  main.cpp  pipeline.cpp
axiom-codegen/: CMakeLists.txt
axiom-codegen/include/axiom/codegen/: cpp_generator.hpp
axiom-codegen/src/: cpp_generator.cpp
axiom-core/: CMakeLists.txt
axiom-core/include/axiom/core/: diagnostic.hpp  result.hpp  source_location.hpp  source_manager.hpp
axiom-core/src/: diagnostic.cpp  source_manager.cpp
axiom-ir/: CMakeLists.txt
axiom-ir/include/axiom/ir/: ir.hpp
axiom-lexer/: CMakeLists.txt
axiom-lexer/include/axiom/lexer/: lexer.hpp  token.hpp  token_kind.hpp
axiom-lexer/src/: lexer.cpp  token.cpp
axiom-parser/: CMakeLists.txt
axiom-parser/include/axiom/parser/: parser.hpp
axiom-parser/src/: parser.cpp
axiom-runtime/: CMakeLists.txt
axiom-runtime/include/axiom/runtime/: state_machine.hpp
axiom-semantic/: CMakeLists.txt
axiom-semantic/include/axiom/semantic/: analyzer.hpp  symbol_table.hpp
axiom-semantic/src/: analyzer.cpp  symbol_table.cpp
axiom-transform/: CMakeLists.txt
axiom-transform/include/axiom/transform/: transform.hpp
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-debug/axiom-ast/: cmake_install.cmake
build-debug/axiom-cli/: axiom  cmake_install.cmake
build-debug/axiom-codegen/: cmake_install.cmake
build-debug/axiom-core/: cmake_install.cmake
build-debug/axiom-ir/: cmake_install.cmake
build-debug/axiom-lexer/: cmake_install.cmake
build-debug/axiom-parser/: cmake_install.cmake
build-debug/axiom-runtime/: cmake_install.cmake
build-debug/axiom-semantic/: cmake_install.cmake
build-debug/axiom-transform/: cmake_install.cmake
build-debug/examples/: CTestTestfile.cmake  cmake_install.cmake
build-debug/tests/: CTestTestfile.cmake  axiom_tests  cmake_install.cmake
cmake/: AxiomDependencies.cmake  AxiomInstall.cmake  AxiomOptions.cmake  AxiomWarnings.cmake
docs/: CODING_STANDARDS.md  Doxyfile  mainpage.dox
examples/: CMakeLists.txt  traffic_light.ax  wafer_stage.ax
tests/: CMakeLists.txt  codegen_tests.cpp  lexer_tests.cpp  parser_tests.cpp  semantic_tests.cpp
tests/data/expected/: WaferStage.cpp.snap  WaferStage.hpp.snap
tools/: README.md
